--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bootstrap-css-with-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chun-lin.github.io/Bootstrap-CSS-with-React/",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -51,7 +52,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "jest": {
     "collectCoverageFrom": [
