--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,11 @@ jobs:
 
       - deploy: 
           name: Deploy to Github pages
-          command: yarn deploy          
+          command: |
+            if [$CIRCLE_BRANCH == "master"]; then
+              git config --global user.email $GH_EMAIL
+              git config --global user.name $GH_NAME  
+              
+              yarn deploy       
+                
+            fi
