--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,10 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "ff:3e:18:79:e6:45:30:9b:b2:06:22:30:01:a9:81:71"
+
       - checkout
 
       # Download and cache dependencies
@@ -40,13 +44,9 @@ jobs:
           name: Run Tests
           command: yarn test
 
-      - deploy: 
-          name: Deploy to Github pages
+      - run: 
+          name: Deploy to Github Pages
           command: |
-            if [$CIRCLE_BRANCH == "master"]; then
-              git config --global user.email $GH_EMAIL
-              git config --global user.name $GH_NAME  
-              
-              yarn deploy       
-                
-            fi
+            git config --global user.email $GH_EMAIL
+            git config --global user.name $GH_NAME  
+            yarn deploy    
